<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/ic_login_background"
    tools:context=".AcercaDeActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
            <ImageView
                android:id="@+id/imageView2"
                android:layout_marginTop="@dimen/margen"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:background="@mipmap/ic_univercr"/>

            <TextView
                android:id="@+id/textView10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:textStyle="bold"
                android:layout_margin="@dimen/margen"
                android:textSize="@dimen/texto_mediano"
                android:textColor="@color/ColorNegro"
                android:text="@string/Text_Universidad" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_gravity="center"
                android:layout_margin="@dimen/margen"
                android:background="@drawable/linerlayout_circular">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textSize="@dimen/texto_mediano"
                    android:text="@string/Text_Autores"
                    android:textStyle="bold"
                    android:textColor="@color/ColorNegro"
                    android:layout_margin="@dimen/margen"/>
                <View
                    android:layout_width="fill_parent"
                    android:layout_height="4dp"
                    android:background="@color/ColorNegro"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"/>

                <TextView
                    android:id="@+id/textView12"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/Text_AUT1"
                    android:textColor="@color/ColorNegro"
                    android:textSize="@dimen/texto_pequeño"
                    android:gravity="center"/>

                <TextView
                    android:id="@+id/textView13"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/Text_AUT2"
                    android:textColor="@color/ColorNegro"
                    android:textSize="@dimen/texto_pequeño"
                    android:gravity="center"/>

                <TextView
                    android:id="@+id/textView14"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/Text_AUT3"
                    android:textColor="@color/ColorNegro"
                    android:textSize="@dimen/texto_pequeño"
                    android:gravity="center"/>
            </LinearLayout>
        </LinearLayout>


    </ScrollView>


</LinearLayout>