<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Controller.ImagenActivity">

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/btnGaleria"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:clickable="true"
        android:onClick="btn_image_click_galeria"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_insert_photo_black_24dp" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/btnCamara"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:clickable="true"
        android:onClick="btn_image_click_camara"
        app:layout_constraintEnd_toStartOf="@+id/btnGaleria"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_photo_camera_black_24dp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="0dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imgFoto"
                    android:layout_width="match_parent"
                    android:layout_height="320dp"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/margen"
                    app:srcCompat="@drawable/ic_add_photo" />


                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="0dp"
                    android:text="@string/Text_Dificulta"
                    android:textColor="@color/common_google_signin_btn_text_dark_focused"
                    android:textSize="@dimen/texto_mediano" />

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="4dp"
                    android:background="@drawable/ic_separador" />

                <RadioGroup
                    android:id="@+id/groupRadiobtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    tools:layout_editor_absoluteX="6dp"
                    tools:layout_editor_absoluteY="384dp">


                    <RadioButton
                        android:id="@+id/radFacil"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_margin="8dp"
                        android:layout_weight="1"
                        android:text="@string/TextDif_Facil"
                        android:textSize="18sp" />

                    <RadioButton
                        android:id="@+id/radIntermedio"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_margin="8dp"
                        android:layout_weight="1"
                        android:text="@string/TextDif_Intermedio"
                        android:textSize="18sp" />

                    <RadioButton
                        android:id="@+id/radDificil"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_margin="8dp"
                        android:layout_weight="1"
                        android:text="@string/TextDif_Dificil"
                        android:textSize="18sp"
                        tools:layout_editor_absoluteX="259dp"
                        tools:layout_editor_absoluteY="394dp" />

                </RadioGroup>

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="4dp"
                    android:background="@drawable/ic_separador" />

                <Button
                    android:id="@+id/btnCargarImg"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:layout_gravity="end"
                    android:layout_marginTop="@dimen/margen"
                    android:background="@drawable/boton_entrar"
                    android:text="@string/Btn_cargar"
                    android:textAlignment="center" />


            </LinearLayout>

    </ScrollView>


</android.support.constraint.ConstraintLayout>